# Cycloid

./: CMakeLists.txt  cycloid.cpp  cycloid.h  dialog.cpp  dialog.h  main.cpp  test.cpp
